v5.1.9
- Updated - Button styles with block-gap support
- Fixed - inline style removal for columns/column/group to avoid removing for child elements (fixes issue where you need to have inline style)
- Fixed - CSS dropcap for paragraph

v5.1.8
- Removed - Gutenberg 'block-templates' support declaration - is added by default for block based themes
- Removed - Base input styles - we use Bootstrap so let's stick to that
- Updated - Comment Walker and template - prepare block-views structure for upcomming comments query
- Updated - Post meta block-views structure changed
- Updated - Latest Posts/Comments widgets markup (Gubenberg blocks)
- Updated - RO translations
- Updated - Gutenberg pattern categories registering via JSON file under /block-patterns/categories.json
- Updated - Default skip links hooks replaced (to fix invalid markup)
- Fixed - Header pattern navigation attribute for overlay/offcanvas
- Fixed - TextArea input markup - remove type[textarea] and aria-required (HTML Validation)
- Added - Login/out Gutenberg block custom markup

v5.1.7
- Removed - FSE class used to hide/show Customizer/Site editor links in admin
- Updated - Enable FSE Admin link by default with developer mode control (to easily disable, eg: production)
- Updated - Add rel home to home-link block
- Updated - Starter content page templates to default page / add back filter for starter content meta
- Updated - New navigation offcanvas option (off/mobile/allways)
- Fixed - File block wrapped into Dynamic's CLASS save_html method (for valid markup)
- Fixed - Query Pagination numbers WP_Query namespacing fatal error and template part HTML
- Fixed - Media / Text image fill generated styles
- Fixed - Admin welcome screen vars
- Added - Letter Spacing style generation from block attributes
- Added - Filter pagination arguments with 'wecodeart/filter/query/pagination/args'

v5.1.6
- Updated - Theme starter content (due to cover updates in Gutenberg plugin)